static/style.css
/* ... */
.created {
    position: fixed;
    bottom: 100px;
    right: 20px;
    font-size: 1em;
    margin: auto;
    height: 100px;
    width: 200px;
    background: url("croix.png") top right no-repeat, #3CBC8D;
}

h2 {
    padding: 0;
    font-family: sans-serif;
    color: rgb(135,135,135);
    text-align: center;
}

button, input {
    background-color: rgb(135,135,135);
    border: none;
    color: rgb(255,255,255);
    text-decoration: none;
    margin: 4px 2px;
    cursor: pointer;
    border-radius: 5px;
}

form, fieldset {
    border: none;
    margin-bottom: 0;
}

body {
    background: rgb(24,24,24);
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.G {
    font-weight: bold;
}

/* Fin Commun */

/* Header */
.css {
    height: 20px;
    width: 20px;
    position: absolute;
    background-image: url("/static/css.png");
    right: 7px;
    top: 10px;
}

.css2 {
    height: 20px;
    width: 20px;
    position: absolute;
    background-image: url("/static/css.png");
    left: 7px;
    top: 10px;
}

header {
    background: rgb(40,40,40);
    box-shadow: 0 4px 4px #1c1a19;
    border-radius: 5px;
    display: flex;
    justify-content: center;
    flex-direction: column;
    color: rgb(255,255,255);
}

header h1 {
    font-family: 'Dayrom', serif;
    font-size: 2.8em;
    font-weight: bold;
    margin: 0 0 0 10px;
    text-align: center;
}

header nav ul {
    font-size: 1.3em;
    color: rgb(255, 245, 234);
    padding-bottom: 3px;
    list-style-type: none;
    display: flex;
    flex-direction: row;
    justify-content: center;
}

header nav li {
    margin-right: 30px;
    margin-left: 10px;
}

header nav a:hover {
    color: rgb(255,255,255);
    text-shadow: #000;
    border-bottom: 3px solid #fff;
}

header nav a {
    color: rgb(255,255,255);
    font-size: 1.3em;
    text-decoration: none;
}

/* Fin Header */

/* Footer */
footer {
    background: rgb(40,40,40);
    box-shadow: 0 4px 4px #1c1a19;
    border-radius: 5px;
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    align-items: center;
    color: rgb(255,255,255);
}

footer a, footer a:hover, footer a:visited {
    text-decoration: none;
    color: rgb(255,255,255);
}

footer .lycee {
    margin-left: 10px;
}

footer .lycee p {
    margin-top: 5px;
    margin-bottom: 0;
}

footer .copyright {
    font-family: 'Dayrom', serif;
    align-self: flex-end;
    list-style: none;
    margin-right: 10px;
    font-size: 1em
}

footer .copyright ul {
    display: flex;
    flex-direction: row;
    list-style-type: none;
    margin-top: 5px;
    margin-bottom: 5px;
}

footer .copyright li {
    font-size: 0.8em;
    margin-left: 20px;
}

/* Fin Footer */

/* Recherche des offres */
.search {
    margin-top: 10px;
}

.tri {
    display: flex;
    justify-content: center;
    width: 30%;
    padding: 16px 20px;
    margin: 10px auto;
    border: 2px solid #615a5f;
    border-radius: 4px;
    background-color: #f1f1f1;
}

.offres {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: auto;
}

.offres .bloc {
    background: rgb(34,34,34);
    border-radius: 10px;
    border: 2px solid #615a5f;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 5px 10px 5px 10px;
    width: 700px;
}

.offres .element {
    margin-bottom: 2px;
    margin-top: 2px;
    padding: 0 0 5px 0;
    color: rgb(135,135,135);
    font-size: 1.3em;
    font-family: sans-serif;
}

.time {
    margin-top: 2px;
    padding: 0 0 0 0;
    color: rgb(135,135,135);
    font-size: 0.6em;
    font-family: sans-serif;
}

.offres .table {
    margin: auto 10px;
}

.table p {
    margin-bottom: 4px;
    margin-top: 4px;
}

.date {
    color: rgb(135,135,135);
    width: 15%;
    padding-left: 0;
    margin-left: 0;
}

.info {
    padding-right: 0;
    margin-right: 0;
    max-width: 35%;
    min-width: 35%
}

.offres .horaire {
    margin-right: 10px;
    display: flex;
    justify-content: space-around;
    margin-top: 3px;
    background-color: rgb(135,135,135);
    border-radius: 15px;
    color: rgb(255,255,255);
}

#table_horaires 
{
    text-align: center;
}

.pages {
    display: flex;
    justify-content: center;
    flex-direction: row;
    font-size: 1em;
    font-family: Dayrom, serif;
    color: #615a5f;
}

.pages a {
    margin-left: 30px;
    margin-right: 30px;
    font-size: 1em;
    font-family: Dayrom, serif;
    color: #615a5f;
    text-decoration: none;
}

.pages a:hover {
    font-weight: bold;
}

#nb_page {
    font-size: 2em;
}

/* Fin Recherche des offres */

/* Inscription */
.register {
    margin-top: 20px;
    margin-bottom: 5px;
}

.critere {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
}

.inscription {
    font-family: sans-serif;
    font-size: 1em;
    background: rgb(34,34,34);
    border-radius: 10px;
    border: 2px solid #615a5f;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 5px 10px 5px 10px;
    width: 700px;
    color: rgb(135,135,135);
}

.bloc_inscription {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: auto auto 150px;
}

.bloc_inscription textarea {
    width: 100%;
    height: 25px;
    box-sizing: border-box;
    border: 2px solid #ccc;
    border-radius: 4px;
    background-color: #f8f8f8;
}

.tri2 {
    width: 100%;
    height: 25px;
    box-sizing: border-box;
    border: 2px solid #ccc;
    border-radius: 4px;
    background-color: #f8f8f8;
}

.reg {
    margin-top: 160px;
    margin-bottom: 0;
}

/* Fin Inscription */

/* Connexion */
.log {
    margin-top: 160px;
}

.login {
    margin-top: 20px;
    margin-bottom: 5px;
}

.champs {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    text-align: center;
    line-height: 2px;
}
/* ... */

